# atm_tracker

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
api/: .env.example  Dockerfile  main.py  pyproject.toml
api/src/: app.py  asgi.py  config.py  constants.py  main.py
api/src/helpers/: connection_manager.py  serializer.py
api/src/services/: __init__.py  connection_manager.py  db.py  generate_body.py  get_data.py  hash_data.py  save_data.py  subscribers.py
api/src/view/: websocket.py
bot/: .env.example  Dockerfile  pyproject.toml
bot/src/: config.py  db.py  db_utils.py  dialogs.py  handlers.py  initialization.py  main.py  states.py  utils.py
tests/: test_atm_tracker.py
web/: app.js  config.js  index.html  websocket.js
web/services/: build_html.js  build_sidebar.js  get_data.js  send_data.js
web/static/: style.css
