[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ilnar Gomelyanov <hibushland@gmail.com>", "Ramil Suleimanov <lllumineux@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.5"
fastapi = "^0.75.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
