[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Ramil Suleimanov <lllumineux@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
